--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-
+    "@tremor/react": "^3.14.1",
     "bcrypt": "^5.1.1",
+    "flowbite-datepicker": "^1.2.6",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.1",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
-
-
     "react": "^18",
-    "react-dom": "^18"
+    "react-datepicker": "^6.3.0",
+    "react-dom": "^18",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.28",
+    "@types/react": "18.2.66",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
