--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "@google/generative-ai": "^0.3.0",
     "@headlessui/react": "^1.7.18",
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@mui/icons-material": "^5.15.13",
+    "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.14.1",
     "bcrypt": "^5.1.1",
     "flowbite-datepicker": "^1.2.6",
+    "framer-motion": "^11.0.14",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.1",
     "next": "14.1.0",
@@ -23,12 +29,13 @@
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.11.28",
     "@types/react": "18.2.66",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.4.1"
   }
 }
